--- a/EloHeaven/App/Inhouses/playerCard.html
+++ b/EloHeaven/App/Inhouses/playerCard.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12">
-    <div class="panel panel-primary card player-card" ng-class="{'swapping': card.player.status == 'swapping'}">
+    <div class="panel card player-card" ng-class="{'swapping': card.player.status == 'swapping'}">
         <div class="panel-body" ng-if="card.player.status == 'empty'">
             <img src="images/unknown-summoner.png" class="image-medium" alt="Unknown" />
             <div class="information">
