changed confirm to verify for league accounts

--- a/EloHeaven/App/Core/summonerList.html
+++ b/EloHeaven/App/Core/summonerList.html
@@ -12,7 +12,7 @@
                         <strong>Verified</strong> <i class="fa fa-check"></i>
                     </div>
                     <div class="unverified" ng-hide="summoner.isVerified">
-                        <button class="btn btn-primary btn-block btn-xs" ng-click="vm.confirmSummoner(summoner)">Verify <i class="fa fa-check"></i></button>
+                        <button class="btn btn-primary btn-block btn-xs" ng-click="vm.verifySummoner(summoner)">Verify <i class="fa fa-check"></i></button>
                     </div>
                     <div class="summoner-remove">
                         <button class="btn btn-danger btn-block btn-xs">Remove <i class="fa fa-remove"></i></button>
