Adding missing files

--- a/EloHeaven/App/Account/Summoners/verifySummoner.view.html
+++ b/EloHeaven/App/Account/Summoners/verifySummoner.view.html
@@ -23,6 +23,6 @@
 </div>
 
 <div class="modal-footer">
-    <button class="btn btn-danger pull-left" ng-click="$dismiss()">Cancel</button>
+    <button class="btn btn-danger pull-left" ng-click="vm.cancel()">Cancel</button>
     <button class="btn btn-primary" ng-click="vm.verifyLater()">Verify Later...</button>
 </div>
