--- a/EloHeaven/App/Core/summonerList.html
+++ b/EloHeaven/App/Core/summonerList.html
@@ -15,6 +15,7 @@
                         <button class="btn btn-primary btn-block btn-xs" ng-click="vm.verifySummoner(summoner)">Verify <i class="fa fa-check"></i></button>
                     </div>
                     <div class="summoner-remove">
+                        <button class="btn btn-danger btn-block btn-xs" ng-click="vm.remove(summoner)">Remove <i class="fa fa-remove"></i></button>
                     </div>
                 </div>
             </div>
