--- a/EloHeaven/App/Account/Summoners/removeSummoner.view.html
+++ b/EloHeaven/App/Account/Summoners/removeSummoner.view.html
@@ -9,7 +9,7 @@
 
     <p><strong>Name:</strong> {{vm.summoner.name}}
     </p>
-    <p><strong>Region:</strong> {{vm.summoner.region}}
+    <p><strong>Region:</strong> {{vm.summoner.region.name}}
     </p>
 
     <div class="alert alert-danger" ng-show="vm.error">
