--- a/EloHeaven/App/Account/Summoners/verifySummoner.view.html
+++ b/EloHeaven/App/Account/Summoners/verifySummoner.view.html
@@ -6,7 +6,7 @@
 	<h4>Account Details</h4>
 	
 	<p><strong>Name:</strong> {{vm.summoner.name}}</p>
-	<p><strong>Region:</strong> {{vm.summoner.region}}</p>
+	<p><strong>Region:</strong> {{vm.summoner.region.name}}</p>
 	
 	<p>
 		To verify the League Account <strong>{{vm.summoner.name}}</strong> is yours, login to your League Account, rename one of your runepages to the following code and press Verify.
