--- a/EloHeaven/App/Core/summonerList.html
+++ b/EloHeaven/App/Core/summonerList.html
@@ -5,7 +5,7 @@
                 <eh-league-picture summoner="summoner" alt="{{summoner.name}}" size="small"></eh-league-picture>
                 <div class="information summoner-information">
                     <h3>{{summoner.name}}</h3>
-                    <p>{{summoner.region}}</p>
+                    <p>{{summoner.region.name}}</p>
                 </div>
                 <div class="information information-right">
                     <div class="verified" ng-show="summoner.isVerified">
